# PEA_1

./: BruteForce.cpp  BruteForce.h  CMakeLists.txt  Test.cpp  TravelingSalesman.cpp  TravelingSalesman.h  config.ini  main.cpp  resultAll.csv  resultAvg.csv
Structures/: Array.cpp  Array.h  Path.cpp  Path.h
testFiles/: PEA_1.docx  PEA_3.docx  SimmulatedAnnealing.rar  config.ini  result.csv  ~$PEA_1.docx  ~$PEA_3.docx
testFiles/SimmulatedAnnealing/code/: Test.h  Timer.cpp  Timer.h  TravelingSalesman.cpp  main.cpp
testFiles/SimmulatedAnnealing/test/: config.ini
testFiles/simAnnRes/: resultAll.csv  resultAvg.csv  resultAvg.xlsx
